--- a/Views/ExtraViews/BarsPreFireViewController/BarsPreFireViewController.storyboard
+++ b/Views/ExtraViews/BarsPreFireViewController/BarsPreFireViewController.storyboard
@@ -18,8 +18,12 @@
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <viewLayoutGuide key="safeArea" id="bcT-re-EOM"/>
                     </view>
+                    <connections>
+                        <segue destination="JQn-Kl-0aB" kind="unwind" identifier="unwindSegueToVC1" unwindAction="unwindToVC1WithSegue:" id="MjP-zA-drm"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="SCT-W5-PWa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <exit id="JQn-Kl-0aB" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="7294" y="116"/>
         </scene>
