--- a/Views/MainViewController/MainViewController.storyboard
+++ b/Views/MainViewController/MainViewController.storyboard
@@ -133,55 +133,19 @@
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
-                            <view alpha="0.75" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="BI8-3T-QuP" customClass="UIViewX" customModule="RealmTimers" customModuleProvider="target">
-                                <rect key="frame" x="179" y="467" width="300" height="300"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMinY="YES"/>
-                                <subviews>
-                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8z2-om-aJo">
-                                        <rect key="frame" x="70" y="63" width="44" height="44"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        <color key="tintColor" name="PrimaryColor"/>
-                                        <state key="normal" image="edit">
-                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        </state>
-                                        <connections>
-                                            <segue destination="1hk-cg-xd8" kind="presentation" identifier="toAddTimerSegue" modalTransitionStyle="coverVertical" id="wNZ-7b-Aa4"/>
-                                        </connections>
-                                    </button>
-                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bFk-b9-2Vi">
-                                        <rect key="frame" x="35" y="128" width="44" height="44"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
-                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        <color key="tintColor" name="PrimaryColor"/>
-                                        <state key="normal" image="trash">
-                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        </state>
-                                        <connections>
-                                            <action selector="deleteTapped:" destination="abm-5L-Rju" eventType="touchUpInside" id="FZW-6q-gp4"/>
-                                        </connections>
-                                    </button>
-                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dJx-Ns-lcb">
-                                        <rect key="frame" x="135" y="29" width="44" height="44"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMinY="YES"/>
-                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        <color key="tintColor" name="PrimaryColor"/>
-                                        <state key="normal" image="settings">
-                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        </state>
-                                        <connections>
-                                            <segue destination="iuz-tj-7Tv" kind="show" identifier="toSettingsSegue" id="Xhr-8a-ej4"/>
-                                        </connections>
-                                    </button>
-                                </subviews>
-                                <color key="backgroundColor" name="PreRed"/>
-                                <userDefinedRuntimeAttributes>
-                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
-                                        <real key="value" value="150"/>
-                                    </userDefinedRuntimeAttribute>
-                                </userDefinedRuntimeAttributes>
-                            </view>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qkv-hk-jlW" customClass="FloatingActionButton" customModule="RealmTimers" customModuleProvider="target">
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bFk-b9-2Vi">
+                                <rect key="frame" x="19" y="559" width="44" height="44"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <color key="tintColor" name="PrimaryColor"/>
+                                <state key="normal" image="trash">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                                <connections>
+                                    <action selector="deleteTapped:" destination="abm-5L-Rju" eventType="touchUpInside" id="FZW-6q-gp4"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qkv-hk-jlW" customClass="FloatingActionButton" customModule="RealmTimers" customModuleProvider="target">
                                 <rect key="frame" x="299" y="589" width="60" height="60"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMinY="YES"/>
                                 <color key="backgroundColor" name="PreRed"/>
@@ -212,6 +176,22 @@
                                     <segue destination="5im-gG-lGA" kind="show" identifier="toTestingViewController" id="HCf-YU-w5v"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8z2-om-aJo" customClass="UIButtonX" customModule="RealmTimers" customModuleProvider="target">
+                                <rect key="frame" x="158" y="589" width="60" height="60"/>
+                                <color key="backgroundColor" name="DarkBlue"/>
+                                <color key="tintColor" name="PrimaryColor"/>
+                                <state key="normal" image="fab">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                        <real key="value" value="30"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                                <connections>
+                                    <segue destination="1hk-cg-xd8" kind="presentation" identifier="toAddTimerSegue" modalTransitionStyle="coverVertical" id="wNZ-7b-Aa4"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
@@ -220,10 +200,12 @@
                             <constraint firstItem="P8k-Io-cAo" firstAttribute="top" secondItem="Cox-pl-ndX" secondAttribute="top" constant="618" id="ASB-Ce-sCN"/>
                             <constraint firstItem="P8k-Io-cAo" firstAttribute="leading" secondItem="Cox-pl-ndX" secondAttribute="leading" constant="22" id="EBr-9A-KML"/>
                             <constraint firstItem="Ish-16-9vX" firstAttribute="top" secondItem="Cox-pl-ndX" secondAttribute="top" id="GPA-yA-fJV"/>
+                            <constraint firstItem="Cox-pl-ndX" firstAttribute="bottom" secondItem="8z2-om-aJo" secondAttribute="bottom" constant="18" id="Hgb-3X-lQe"/>
                             <constraint firstItem="gzK-32-aT1" firstAttribute="leading" secondItem="Cox-pl-ndX" secondAttribute="leading" id="Yv6-p2-zSO"/>
                             <constraint firstItem="eeg-5G-SLO" firstAttribute="leading" secondItem="Cox-pl-ndX" secondAttribute="leading" constant="94" id="ZVF-S6-kzZ"/>
                             <constraint firstItem="Ish-16-9vX" firstAttribute="bottom" secondItem="Cox-pl-ndX" secondAttribute="bottom" id="c7G-fZ-2CC"/>
                             <constraint firstItem="gzK-32-aT1" firstAttribute="top" secondItem="Cox-pl-ndX" secondAttribute="top" constant="105" id="fGT-8f-YjK"/>
+                            <constraint firstItem="8z2-om-aJo" firstAttribute="centerX" secondItem="QbN-O3-kLB" secondAttribute="centerX" id="nMI-sf-huU"/>
                             <constraint firstItem="eeg-5G-SLO" firstAttribute="centerX" secondItem="Ish-16-9vX" secondAttribute="centerX" id="pTU-cG-ka6"/>
                             <constraint firstItem="gzK-32-aT1" firstAttribute="trailing" secondItem="Cox-pl-ndX" secondAttribute="trailing" id="qES-XF-JPd"/>
                             <constraint firstItem="gzK-32-aT1" firstAttribute="leading" secondItem="Cox-pl-ndX" secondAttribute="leading" id="uoY-LK-WTh"/>
@@ -231,13 +213,16 @@
                             <constraint firstItem="Ish-16-9vX" firstAttribute="leading" secondItem="gzK-32-aT1" secondAttribute="leading" id="zIU-Hj-XdQ"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="Cox-pl-ndX"/>
+                        <variation key="default">
+                            <mask key="subviews">
+                                <exclude reference="qkv-hk-jlW"/>
+                            </mask>
+                        </variation>
                     </view>
                     <navigationItem key="navigationItem" id="mcE-ub-lW8"/>
                     <connections>
                         <outlet property="deleteTimersButton" destination="bFk-b9-2Vi" id="cSo-mm-mPK"/>
-                        <outlet property="menuView" destination="BI8-3T-QuP" id="yhF-Ao-4gh"/>
                         <outlet property="newTimerButton" destination="8z2-om-aJo" id="hth-ik-zHb"/>
-                        <outlet property="settingsButton" destination="dJx-Ns-lcb" id="mXj-Cb-hnu"/>
                         <outlet property="tableView" destination="gzK-32-aT1" id="OOv-7L-RZz"/>
                         <outlet property="testVCButton" destination="P8k-Io-cAo" id="pW3-kB-1uE"/>
                     </connections>
@@ -287,11 +272,12 @@
         </scene>
     </scenes>
     <resources>
-        <image name="edit" width="28" height="28"/>
         <image name="fab" width="60" height="60"/>
         <image name="mars" width="80" height="80"/>
-        <image name="settings" width="28" height="24"/>
         <image name="trash" width="26" height="28"/>
+        <namedColor name="DarkBlue">
+            <color red="0.0039215686274509803" green="0.039215686274509803" blue="0.25098039215686274" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
         <namedColor name="PreRed">
             <color red="0.74901960784313726" green="0.086274509803921567" blue="0.14509803921568629" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
